_sass/main.scss
$backgroundColor: #fff;
$bodyColor: #111;
$bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";

body {
  background: $backgroundColor;
  color: $bodyColor;
  font-family: $bodyFont;
  margin: 0;
  font-size: 16px;
}

header {
  display: none;
  nav a {
    color: #fff;
  }
}

.container {
  width: 50rem;
  margin: auto;
}

.hero {
  background: #000;
}

.first {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #000;
  color: #999;

  h1 {
    font-size: 3rem;
  }

  h1, h2 {
    font-weight: 200;
    margin: 1rem;
  }

  .content {
    text-align: center;
  }

  video {
    width: 480px;
    margin-bottom: 5rem;
    pointer-events: none;
  }

  a {
    color: #fff;
    display: inline-block;
    margin: 2rem;

    transition: .2s color ease-in-out;

    &:hover {
      color: #0af;
    }
  }
}

